<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:fillViewport="true"
    tools:context=".ui.dmt.AddSenderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/gradient_back"
        android:backgroundTint="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_service_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Add Sender"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_logo"

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_back"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:hint="Enter First Name"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_back"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:hint="Enter Last Name"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/pincode" />

        <EditText
            android:inputType="number"
            android:maxLength="6"
            android:id="@+id/et_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_back"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:hint="Enter Pincode"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_back"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:hint="Enter Address"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/gradient_back"
            android:elevation="8dp"
            android:text="Proceed"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/otp_ly"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="20dp"
                android:text="@string/otp" />

            <EditText
                android:inputType="number"
                android:maxLength="6"
                android:id="@+id/et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/gradient_back"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:hint="Enter otp"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/gradient_back"
                android:elevation="8dp"
                android:text="Verify"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>