<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:fillViewport="true"
    tools:context=".ui.bbps.BbpsBillFetchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/gradient_back"
        android:backgroundTint="@color/white"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_service_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Service Name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_logo"

                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:src="@drawable/logo" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/operator" />

        <TextView
            android:id="@+id/tv_operator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_back"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:hint="Select Operator"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="20dp"
            android:text="@string/number" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/gradient_back"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:hint="Enter number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/note_content"
            android:textColor="@color/black" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_fetch_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/gradient_back"
            android:elevation="8dp"
            android:text="Fetch Bill"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


</ScrollView>