<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.dmt.AddBeneFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/gradient_back"
        android:backgroundTint="@color/white"
        android:elevation="2dp">

        <LinearLayout
            android:padding="6dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Beneficiary"
                        android:textColor="@color/primaryColorDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add new beneficiary"
                        android:textSize="11sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="0.6"
                    android:src="@drawable/logo" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="20dp"
                android:text="@string/bank" />

            <EditText
                android:id="@+id/et_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/gradient_back"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:hint="Select Bank Name"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ifsc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="20dp"
                android:text="@string/ifsc" />

            <EditText
                android:textAllCaps="true"
                android:id="@+id/et_ifsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/gradient_back"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:hint="Enter IFSC"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="20dp"
                android:text="@string/bene_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/gradient_back"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:hint="Enter Bene Name"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_account_upi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="20dp"
                android:text="@string/account_name" />

            <EditText
                android:id="@+id/et_account_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/gradient_back"
                android:backgroundTint="@color/white"
                android:elevation="2dp"
                android:hint="Enter Account Number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:layout_weight="1"
                    android:id="@+id/btn_verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/gradient_back"
                    android:elevation="8dp"
                    android:text="Verify Bene"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:layout_weight="1"
                    android:id="@+id/btn_proceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/gradient_back"
                    android:elevation="8dp"
                    android:text="Add Bene"
                    android:textColor="@color/white"
                    android:textStyle="bold" />


            </LinearLayout>




        </LinearLayout>


    </ScrollView>

</FrameLayout>